apps/argocd/k8s-gateway-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - "argocd.services.luke-domain.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-server-grpc-route
  namespace: argocd
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - "argocli.services.luke-domain.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
      matches:
        - headers:
          - name: Content-Type
            value: application/grpc
